@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-12-3
+DATE: 05/11/2018
+STAFF: lec 
+CHANGES: TR12858/MRK_QTL.py
+add J: and counts to MRK_QTL_2.rpt
+
 TAG: qcreports_db-6-0-12-2
 DATE: 04/06/2018
 STAFF: lec
